--- a/blink/Makefile
+++ b/blink/Makefile
@@ -1,14 +1,14 @@
-PROJECT = awesomesauce
+PROJECT = main
 BUILD_DIR = bin
 
 SHARED_DIR = ../my-common-code
-CFILES = my-project.c
+CFILES = blink.c
 CFILES += api.c
 AFILES += api-asm.S
 
 # TODO - you will need to edit these two lines!
-DEVICE=stm32f407vgt6
-OOCD_FILE = board/stm32f4discovery.cfg
+DEVICE=stm32l432kc
+OOCD_FILE = board/st_nucleo_l4.cfg
 
 # You shouldn't have to edit anything below here.
 VPATH += $(SHARED_DIR)
